Save figures directly to paper directory

--- a/viz-pytorch.ipynb
+++ b/viz-pytorch.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "id": "62d5cf4c",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "id": "0ec6ac82",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "id": "daa08e39",
    "metadata": {},
    "outputs": [],
@@ -79,8 +79,8 @@
     "from pathlib import Path\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "figures = Path(\"figures\")\n",
-    "figures.mkdir(exist_ok=True)\n",
+    "figures = Path(\"paper-miccai\", \"figures\")\n",
+    "figures.mkdir(exist_ok=True, parents=False)\n",
     "\n",
     "\n",
     "class LOSS_COLOR(Enum):\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "id": "9e06c95d",
    "metadata": {},
    "outputs": [],
@@ -222,11 +222,7 @@
     "\n",
     "    for y_val, color, label in thresholds:\n",
     "        # Add the horizontal line (without built-in annotation)\n",
-    "        fig.add_hline(\n",
-    "            y=y_val,\n",
-    "            line_color=color,\n",
-    "            line_dash=\"dash\"\n",
-    "        )\n",
+    "        fig.add_hline(y=y_val, line_color=color, line_dash=\"dash\")\n",
     "\n",
     "        # Add the text label separately using add_annotation\n",
     "        fig.add_annotation(\n",
@@ -267,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "id": "60381aae",
    "metadata": {},
    "outputs": [
@@ -42518,10 +42514,18 @@
     }
    ],
    "source": [
-    "y1, y1_avg, xaxis = get_loss_values(Path(\"logs\", \"voxelmorph_train_2d_default.log\"))\n",
-    "y2, y2_avg, _ = get_loss_values(Path(\"logs\", \"voxelmorph_train_2d_dmp.log\"))\n",
-    "y3, y3_avg, _ = get_loss_values(Path(\"logs\", \"voxelmorph_train_2d_bf16.log\"))\n",
-    "y4, y4_avg, _ = get_loss_values(Path(\"logs\", \"voxelmorph_train_2d_amp.log\"))\n",
+    "y1, y1_avg, xaxis = get_loss_values(\n",
+    "    Path(\"logs\", \"voxelmorph\", \"voxelmorph_train_2d_default.log\")\n",
+    ")\n",
+    "y2, y2_avg, _ = get_loss_values(\n",
+    "    Path(\"logs\", \"voxelmorph\", \"voxelmorph_train_2d_dmp.log\")\n",
+    ")\n",
+    "y3, y3_avg, _ = get_loss_values(\n",
+    "    Path(\"logs\", \"voxelmorph\", \"voxelmorph_train_2d_bf16.log\")\n",
+    ")\n",
+    "y4, y4_avg, _ = get_loss_values(\n",
+    "    Path(\"logs\", \"voxelmorph\", \"voxelmorph_train_2d_amp.log\")\n",
+    ")\n",
     "plot_loss(\n",
     "    [\n",
     "        {\n",
@@ -42549,20 +42553,20 @@
     "        #     \"color\": LOSS_COLOR.AMP.value,\n",
     "        # },\n",
     "    ],\n",
-    "    fout_stem=figures / \"voxelmorph_2d_loss\",\n",
+    "    fout_stem=figures / \"vm2d_loss\",\n",
     "    xaxis=xaxis,\n",
     ")\n",
     "\n",
     "plot_pmin(\n",
     "    \"PMIN moving avg:\",\n",
-    "    log_file=Path(\"logs\", \"voxelmorph_train_2d_dmp.log\"),\n",
+    "    log_file=Path(\"logs\", \"voxelmorph\", \"voxelmorph_train_2d_dmp.log\"),\n",
     "    fout_stem=figures.joinpath(f\"vm2d_pmin_moving_avg\"),\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "id": "13209a9d",
    "metadata": {},
    "outputs": [
@@ -84813,8 +84817,12 @@
     }
    ],
    "source": [
-    "y1, y1_avg, xaxis = get_loss_values(Path(\"logs\", \"voxelmorph_train_3d_default.log\"))\n",
-    "y2, y2_avg, _ = get_loss_values(Path(\"logs\", \"voxelmorph_train_3d_dmp.log\"))\n",
+    "y1, y1_avg, xaxis = get_loss_values(\n",
+    "    Path(\"logs\", \"voxelmorph\", \"voxelmorph_train_3d_default.log\")\n",
+    ")\n",
+    "y2, y2_avg, _ = get_loss_values(\n",
+    "    Path(\"logs\", \"voxelmorph\", \"voxelmorph_train_3d_dmp.log\")\n",
+    ")\n",
     "plot_loss(\n",
     "    [\n",
     "        {\n",
@@ -84830,13 +84838,13 @@
     "            \"color\": LOSS_COLOR.DMP.value,\n",
     "        },\n",
     "    ],\n",
-    "    fout_stem=figures / \"voxelmorph_3d_loss\",\n",
+    "    fout_stem=figures / \"vm3d_loss\",\n",
     "    xaxis=xaxis,\n",
     ")\n",
     "\n",
     "plot_pmin(\n",
     "    \"PMIN moving avg:\",\n",
-    "    log_file=Path(\"logs\", \"voxelmorph_train_3d_dmp.log\"),\n",
+    "    log_file=Path(\"logs\", \"voxelmorph\", \"voxelmorph_train_3d_dmp.log\"),\n",
     "    fout_stem=figures.joinpath(f\"vm3d_pmin_moving_avg\"),\n",
     ")"
    ]
@@ -84851,7 +84859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "id": "914727c3",
    "metadata": {},
    "outputs": [
@@ -113082,10 +113090,10 @@
     }
    ],
    "source": [
-    "y1, y1_avg, xaxis = get_loss_values(Path(\"logs\", \"mnist_train_default.log\"))\n",
-    "y2, y2_avg, _ = get_loss_values(Path(\"logs\", \"mnist_train_dmp.log\"))\n",
-    "y3, y3_avg, _ = get_loss_values(Path(\"logs\", \"mnist_train_bf16.log\"))\n",
-    "y4, y4_avg, _ = get_loss_values(Path(\"logs\", \"mnist_train_amp.log\"))\n",
+    "y1, y1_avg, xaxis = get_loss_values(Path(\"logs\", \"mnist\", \"mnist_train_default.log\"))\n",
+    "y2, y2_avg, _ = get_loss_values(Path(\"logs\", \"mnist\", \"mnist_train_dmp.log\"))\n",
+    "y3, y3_avg, _ = get_loss_values(Path(\"logs\", \"mnist\", \"mnist_train_bf16.log\"))\n",
+    "y4, y4_avg, _ = get_loss_values(Path(\"logs\", \"mnist\", \"mnist_train_amp.log\"))\n",
     "plot_loss(\n",
     "    [\n",
     "        {\n",
@@ -113120,7 +113128,7 @@
     "\n",
     "plot_pmin(\n",
     "    \"PMIN moving avg:\",\n",
-    "    log_file=Path(\"logs\", \"mnist_train_dmp.log\"),\n",
+    "    log_file=Path(\"logs\", \"mnist\", \"mnist_train_dmp.log\"),\n",
     "    fout_stem=figures.joinpath(f\"mnist_pmin_moving_avg\"),\n",
     ")\n"
    ]
@@ -113136,7 +113144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-dmp",
+   "display_name": "paper-3 (3.10.18)",
    "language": "python",
    "name": "python3"
   },
@@ -113150,7 +113158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
