Update paper dir name to fix github submodule issue

--- a/viz-pytorch.ipynb
+++ b/viz-pytorch.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "62d5cf4c",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "0ec6ac82",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
     "        width=600,\n",
     "        height=600,\n",
     "        font=dict(\n",
-    "            size=20,\n",
+    "            size=24,\n",
     "            color=\"black\",\n",
     "        ),\n",
     "        plot_bgcolor=\"white\",\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "daa08e39",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
     "from pathlib import Path\n",
     "import plotly.graph_objects as go\n",
     "\n",
-    "figures = Path(\"paper-miccai\", \"figures\")\n",
+    "figures = Path(\"paper\", \"figures\")\n",
     "figures.mkdir(exist_ok=True, parents=False)\n",
     "\n",
     "\n",
@@ -122,6 +122,7 @@
     "    *,\n",
     "    fout_stem: Path,\n",
     "    xaxis: list[int],\n",
+    "    yaxis_title: str,\n",
     "    avg_only: bool = False,\n",
     ") -> None:\n",
     "    # Create Plotly figure\n",
@@ -152,7 +153,7 @@
     "\n",
     "    fig.update_layout(\n",
     "        xaxis_title=\"Batch Index\",\n",
-    "        yaxis_title=\"Loss: MSE + 0.01 x Grad Loss\",\n",
+    "        yaxis_title=yaxis_title,\n",
     "    )\n",
     "    set_plot_style(fig)\n",
     "\n",
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "9e06c95d",
    "metadata": {},
    "outputs": [],
@@ -233,7 +234,7 @@
     "            xanchor=\"left\",\n",
     "            yanchor=\"middle\",\n",
     "            showarrow=False,\n",
-    "            font_size=14,\n",
+    "            font_size=18,\n",
     "        )\n",
     "\n",
     "    # Update layout\n",
@@ -263,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "60381aae",
    "metadata": {},
    "outputs": [
@@ -20734,7 +20735,7 @@
        "layout": {
         "font": {
          "color": "black",
-         "size": 20
+         "size": 24
         },
         "height": 600,
         "legend": {
@@ -41579,7 +41580,7 @@
         "annotations": [
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "FP16",
@@ -41591,7 +41592,7 @@
          },
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "BF16",
@@ -41603,7 +41604,7 @@
          },
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "FP24<br>(N/A)",
@@ -41615,7 +41616,7 @@
          },
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "FP32",
@@ -41628,7 +41629,7 @@
         ],
         "font": {
          "color": "black",
-         "size": 20
+         "size": 24
         },
         "height": 600,
         "legend": {
@@ -42555,6 +42556,7 @@
     "    ],\n",
     "    fout_stem=figures / \"vm2d_loss\",\n",
     "    xaxis=xaxis,\n",
+    "    yaxis_title=\"Loss: MSE + 0.01 x Grad Loss\",\n",
     ")\n",
     "\n",
     "plot_pmin(\n",
@@ -42566,7 +42568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "13209a9d",
    "metadata": {},
    "outputs": [
@@ -63037,7 +63039,7 @@
        "layout": {
         "font": {
          "color": "black",
-         "size": 20
+         "size": 24
         },
         "height": 600,
         "legend": {
@@ -83882,7 +83884,7 @@
         "annotations": [
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "FP16",
@@ -83894,7 +83896,7 @@
          },
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "BF16",
@@ -83906,7 +83908,7 @@
          },
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "FP24<br>(N/A)",
@@ -83918,7 +83920,7 @@
          },
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "FP32",
@@ -83931,7 +83933,7 @@
         ],
         "font": {
          "color": "black",
-         "size": 20
+         "size": 24
         },
         "height": 600,
         "legend": {
@@ -84840,6 +84842,7 @@
     "    ],\n",
     "    fout_stem=figures / \"vm3d_loss\",\n",
     "    xaxis=xaxis,\n",
+    "    yaxis_title=\"Loss: MSE + 0.01 x Grad Loss\",\n",
     ")\n",
     "\n",
     "plot_pmin(\n",
@@ -84859,7 +84862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "914727c3",
    "metadata": {},
    "outputs": [
@@ -85046,7 +85049,7 @@
        "layout": {
         "font": {
          "color": "black",
-         "size": 20
+         "size": 24
         },
         "height": 600,
         "legend": {
@@ -85859,7 +85862,7 @@
          "tickcolor": "black",
          "ticks": "outside",
          "title": {
-          "text": "Loss: MSE + 0.01 x Grad Loss"
+          "text": "Loss: Adadelta"
          }
         }
        }
@@ -112155,7 +112158,7 @@
         "annotations": [
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "FP16",
@@ -112167,7 +112170,7 @@
          },
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "BF16",
@@ -112179,7 +112182,7 @@
          },
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "FP24<br>(N/A)",
@@ -112191,7 +112194,7 @@
          },
          {
           "font": {
-           "size": 14
+           "size": 18
           },
           "showarrow": false,
           "text": "FP32",
@@ -112204,7 +112207,7 @@
         ],
         "font": {
          "color": "black",
-         "size": 20
+         "size": 24
         },
         "height": 600,
         "legend": {
@@ -113123,6 +113126,7 @@
     "    ],\n",
     "    fout_stem=figures / \"mnist_loss\",\n",
     "    xaxis=xaxis,\n",
+    "    yaxis_title=\"Loss: Adadelta\",\n",
     "    avg_only=True,\n",
     ")\n",
     "\n",
